# guadalinex-v5

apps/escritorio-movistar/tags/escritorio-movistar-6.1/: ChangeLog  aclocal.m4  configure.ac
apps/escritorio-movistar/tags/escritorio-movistar-6.1/contrib/: Makefile.am  Makefile.in
apps/escritorio-movistar/tags/escritorio-movistar-6.1/debian/: README.Debian  copyright  escritorio-movistar-default  postinst  rules
apps/escritorio-movistar/tags/escritorio-movistar-6.1/doc/: Makefile.in
apps/escritorio-movistar/tags/escritorio-movistar-6.1/po/: POTFILES.in  es.po
apps/escritorio-movistar/tags/escritorio-movistar-6.1/src/: Makefile.am
apps/escritorio-movistar/tags/escritorio-movistar-6.5/src/: Makefile.am
apps/escritorio-movistar/trunk/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
apps/escritorio-movistar/trunk/contrib/e220/: 04-huawei.rules  Makefile.am  Makefile.in  huaweiAktBbo-pid-1003.c
apps/escritorio-movistar/trunk/contrib/option/: 04-option.rules  Makefile.am
apps/escritorio-movistar/trunk/data/: Makefile.am  Makefile.in
apps/escritorio-movistar/trunk/data/autostart/: Makefile.am  Makefile.in  escritorio-movistar.desktop
apps/escritorio-movistar/trunk/data/dbus/: Makefile.in  pppmanager.conf
apps/escritorio-movistar/trunk/data/glade/: Makefile.am  Makefile.in  agenda.glade  cardmanager.glade  connect-preferences-frame.glade  consum.glade  maintoolbar.glade  mainwindow.glade  menu_pcmcia.glade  preferences.glade  rssfeeder.glade  statswidget.glade  systray_menu.glade  updater.glade
apps/escritorio-movistar/trunk/data/icon-theme/: Makefile.in
apps/escritorio-movistar/trunk/data/icons/: Makefile.am
apps/escritorio-movistar/trunk/data/mime-stuff/: escritorio-movistar.applications  escritorio-movistar.xml
apps/escritorio-movistar/trunk/data/mobile-manager/: Makefile.am  mm_devices_conf.glade
apps/escritorio-movistar/trunk/debian/: changelog  control  cron.d.ex  postinst  postrm  rules
apps/escritorio-movistar/trunk/doc/: Makefile.in
apps/escritorio-movistar/trunk/doc/manual/: Makefile.in
apps/escritorio-movistar/trunk/src/: Makefile.in
apps/escritorio-movistar/trunk/src/frontend/: MSDesktop.py  Makefile.am  Makefile.in
apps/escritorio-movistar/trunk/src/mobilemanager/: MobileDeviceOption.py  MobileDeviceUSB.py  MobileDialPPP.py  MobileStatus.py  mdpcmodule.c
apps/escritorio-movistar/trunk/src/pppmanager/: Makefile.am  Makefile.in  ppphelper
apps/gedit-plugin-tloleo/trunk/: aclocal.m4  autogen.sh  config.h  config.status  configure.ac
apps/gedit-plugin-tloleo/trunk/debian/: changelog  control  copyright  gedit-plugin-tloleo-default.ex  gedit-plugin-tloleo.doc-base.EX  init.d.lsb.ex  manpage.xml.ex  rules  watch.ex
apps/gedit-plugin-tloleo/trunk/plugins/: Makefile.in
apps/gedit-plugin-tloleo/trunk/plugins/TLoleo/: Makefile
apps/gedit-plugin-tloleo/trunk/po/: LINGUAS  Makefile  POTFILES  en.gmo  en.po  es.gmo  es.po
apps/gnome-volume-manager/tags/gnome-volume-manager_2.22.1-1ubuntu7-1guada1/: HACKING  Makefile.am  configure.in  gnome-volume-manager.spec.in  gnome-volume-properties.desktop.in  gnome-volume-properties.glade
apps/gnome-volume-manager/tags/gnome-volume-manager_2.22.1-1ubuntu7-1guada1/debian/: control  copyright
apps/gnome-volume-manager/tags/gnome-volume-manager_2.22.1-1ubuntu7-1guada1/po/: ChangeLog  POTFILES.in  az.po  cy.po  el.po  en_GB.po  fa.po  fi.po  is.po  it.po  mn.po  ms.po  nn.po  oc.po  pa.po  pt_BR.po  ro.po  si.po  sk.po  sr@Latn.po  te.po
apps/gnome-volume-manager/tags/gnome-volume-manager_2.22.1-1ubuntu7-1guada1/src/: manager.c  properties.c
apps/gnome-volume-manager/tags/gnome-volume-manager_2.22.1-1ubuntu7/src/: Makefile.am
apps/guada-ubiquity/trunk/: configure  configure.ac
apps/guada-ubiquity/trunk/data/: Makefile.am
apps/guada-ubiquity/trunk/data/desktop/: Makefile.am
apps/guada-ubiquity/trunk/data/glade/: stepGuadaPrePartition.glade  stepGuadaWelcome.glade
apps/guada-ubiquity/trunk/debian/: changelog  control  dirs  files  guada-ubiquity.links  postrm  preinst  rules
apps/guada-ubiquity/trunk/src/: Makefile.am
apps/guada-ubiquity/trunk/src/frontend/: guada_ui.py
apps/guada-ubiquity/trunk/src/scripts/: 91guadalinex-repos  Makefile.am
apps/hermes/tags/hermes-0.4.8/: configure.in
apps/hermes/tags/hermes-0.4.8/actors/: pda.py  storage.py
apps/hermes/tags/hermes-0.4.8/config-guada/: c3pocardreader.gnome  sample.gnome
apps/hermes/tags/hermes-0.4.8/debian/: changelog
apps/mobile-manager/tags/mobile-manager-0.7/: ChangeLog  aclocal.m4  configure.ac
apps/mobile-manager/tags/mobile-manager-0.7/contrib/: Makefile.am  Makefile.in
apps/mobile-manager/tags/mobile-manager-0.7/data/: Makefile.am
apps/mobile-manager/tags/mobile-manager-0.7/debian/: changelog  control  init.d  mobile-manager-default  postinst
apps/mobile-manager/tags/mobile-manager-0.7/po/: es.po
apps/mobile-manager/tags/mobile-manager-0.7/src/: MobileController.py  MobileDevice.py  MobileDial.py  MobileStatus.py  __init__.py  mdpcmodule.c
apps/mobile-manager/trunk/src/: Makefile.am  Makefile.in  MobileCapabilities.py
apps/mobile-manager/trunk/src/devices/: Makefile.am  MobileDeviceBluetooth.py  MobileDeviceNozomi.py
apps/mobile-manager/trunk/src/mmdt/: mmdt  mmdt.glade
apps/mobile-manager/trunk/src/ui/: Makefile.am  MobileATOptionsButton.py  MobileCarrierDialog.py
apps/mount-systray/trunk/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
apps/mount-systray/trunk/data/: Makefile.am  Makefile.in  mount-systray.schemas.in  preferences.glade
apps/mount-systray/trunk/debian/: changelog  rules
apps/mount-systray/trunk/po/: es.po
apps/mount-systray/trunk/src/: MSConfig.py  MSSystray.py
apps/ubiquity/tags/ubiquity-1.8.4/: configure  configure.ac
apps/ubiquity/tags/ubiquity-1.8.4/debian/: changelog  ubiquity-frontend-kde.install
apps/ubiquity/tags/ubiquity-1.8.4/doc/: README
apps/ubiquity/tags/ubiquity-1.8.4/po/: bg.po  bs.po  el.po  es.po  zh_CN.po
apps/ubiquity/tags/ubiquity-1.8.4/scripts/: apt-setup
gensys/: functions  (+2 more)
(+3517 files in other folders)
