SUBDIRS = frontend \
	sync/AgendaLib \
	sync/SyncMLTk/src/bld/linux \
	sync/ptools \
	sync/syncml \
	sync/emsyncmodule \
	traffic/traffic \
	traffic/emtrafficmodule

emsyncmdir=$(pythondir)
emsyncm_DATA=sync/emsyncmodule/emsyncmodule.so

emtrafficmdir=$(pythondir)
emtrafficm_DATA=traffic/emtrafficmodule/emtrafficmodule.so

