gladedir = $(datadir)/escritorio-movistar/glade
glade_DATA =				\
		agenda.glade		\
		ask_password.glade	\
		consum.glade		\
		mainwindow.glade	\
		progress_dialog.glade	\
		systray_menu.glade	\
		cardmanager.glade	\
		import.glade		\
		menu_pcmcia.glade	\
		security.glade		\
		connect-preferences-frame.glade	\
		maintoolbar.glade	\
		preferences.glade	\
		statswidget.glade	\
		updater.glade		\
		rssfeeder.glade

EXTRA_DIST=$(glade_DATA)
